--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "document"
     ],
     "scripts": {
+        "dev": "cross-env CONFIG_NAME=default yarn docs:dev",
         "docs:dev:default": "cross-env CONFIG_NAME=default yarn docs:dev",
         "docs:build:default": "cross-env CONFIG_NAME=default yarn docs:build",
         "docs:build:all": "for f in $(ls ./docs/.vuepress/custom | grep \"json\"); do (cross-env CONFIG_NAME=$(basename -s .json $f) vuepress build docs -d docs/.vuepress/dist/$(basename -s .json $f)); done",
